--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
 language: go
 
 go:
- - 1.3.3
- - 1.4.2
- - 1.5.1
+ - 1.8.x
+ - 1.9.x
+ - 1.10.x
+ - master
+
+matrix:
+ fast_finish: true
+ allow_failures:
+  - go: master
+
 
 # Get deps, build, test, and ensure the code is gofmt'ed.
 script:
